--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,6 +48,7 @@
                 android:layout_marginRight="@dimen/spacing_normal_16" />
 
         <ImageView
+                android:id="@+id/iv_send"
                 android:layout_width="@dimen/image_button_size_24"
                 android:layout_height="@dimen/image_button_size_24"
                 android:src="@drawable/ic_send_white_24dp"
