--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,7 +45,9 @@
                 android:paddingTop="@dimen/spacing_normal_16"
                 android:paddingBottom="@dimen/spacing_normal_16"
                 android:layout_marginLeft="@dimen/spacing_normal_16"
-                android:layout_marginRight="@dimen/spacing_normal_16" />
+                android:layout_marginRight="@dimen/spacing_normal_16"
+                android:imeOptions="actionDone"
+                android:inputType="text"/>
 
         <ImageView
                 android:id="@+id/iv_send"
