--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -101,6 +101,14 @@
                 android:textSize="@dimen/font_normal_16"
                 android:text="@string/profile_label_rating"/>
         </LinearLayout>
+
+        <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/spacing_normal_16"
+                android:layout_marginBottom="@dimen/spacing_normal_16"
+                android:background="@color/color_divider_light"/>
+
         <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -126,6 +134,102 @@
                 android:text="@string/profile_label_respect"/>
         </LinearLayout>
 
+    </LinearLayout>
+
+    <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/spacing_normal_16">
+
+        <ImageView
+                android:id="@+id/ic_avatar"
+                android:layout_width="@dimen/btn_round_size_40"
+                android:layout_height="@dimen/btn_round_size_40"
+                android:src="@drawable/ic_face_black_24dp"/>
+
+        <!--TextInputLayout-->
+
+        <EditText
+             android:id="@+id/et_first_name"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:hint="@string/profile_hint_first_name"
+             android:layout_toRightOf="@id/ic_avatar"
+             android:layout_marginLeft="@dimen/spacing_normal_16"/>
+
+        <!--TextInputLayout-->
+
+        <EditText
+            android:id="@+id/et_last_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/profile_hint_last_name"
+            android:layout_toRightOf="@id/ic_avatar"
+            android:layout_marginLeft="@dimen/spacing_normal_16"
+            android:layout_below="@id/et_first_name"/>
+
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/color_divider_dark"
+        android:layout_marginLeft="@dimen/space_maximum_72"/>
+
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="@dimen/spacing_normal_16">
+        <ImageView
+            android:id="@+id/ic_about"
+            android:layout_width="@dimen/btn_round_size_40"
+            android:layout_height="@dimen/btn_round_size_40"
+            android:src="@drawable/ic_info_outline_black_24dp"/>
+
+        <EditText
+            android:id="@+id/et_about"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/profile_hint_about"
+            android:layout_toRightOf="@id/ic_about"
+            android:layout_marginLeft="@dimen/spacing_normal_16"
+            android:layout_below="@id/et_first_name"/>
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/color_divider_dark"
+        android:layout_marginLeft="@dimen/space_maximum_72"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="@dimen/spacing_normal_16">
+        <ImageView
+            android:id="@+id/ic_repo"
+            android:layout_width="@dimen/btn_round_size_40"
+            android:layout_height="@dimen/btn_round_size_40"
+            android:src="@drawable/ic_backup_black_24dp"/>
+
+        <EditText
+            android:id="@+id/et_repo"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:hint="@string/profile_hint_repo"
+            android:layout_toRightOf="@id/ic_repo"
+            android:layout_marginLeft="@dimen/spacing_normal_16"
+            android:layout_marginRight="@dimen/spacing_normal_16"
+            android:layout_below="@id/et_first_name"/>
+        
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/ic_remove_red_eye_black_24dp"
+            android:layout_gravity="center_vertical"/>
     </LinearLayout>
 
 </LinearLayout>
