--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,4 +15,5 @@
     <dimen name="image_button_size_24">24dp</dimen>
     <dimen name="btn_round_size_40">40dp</dimen>
     <dimen name="avatar_round_size">112dp</dimen>
+    <dimen name="space_maximum_72">72dp</dimen>
 </resources>
