--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -14,7 +14,7 @@
         <ru.skillbranch.devintensive.ui.custom.AspectRatioImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@color/color_gray_dark"
+                android:src="@drawable/profile_bg"
                 android:scaleType="centerCrop"
                 app:aspectRatio="1.78"/>
         <RelativeLayout
@@ -27,7 +27,7 @@
                 android:layout_width="@dimen/btn_round_size_40"
                 android:layout_height="@dimen/btn_round_size_40"
                 android:background="@drawable/btn_round_bg"
-                android:src="@drawable/ic_brightness_high_black_24dp"
+                android:src="@drawable/ic_switch_day_night"
                 android:layout_toLeftOf="@id/iv_avatar"
                 android:layout_marginRight="@dimen/spacing_huge_32"
                 android:layout_marginTop="36dp"/>
@@ -36,7 +36,7 @@
                 android:id="@+id/iv_avatar"
                 android:layout_width="@dimen/avatar_round_size"
                 android:layout_height="@dimen/avatar_round_size"
-                android:src="@drawable/ic_face_black_24dp"
+                android:src="@drawable/avatar_default"
                 android:layout_centerHorizontal="true"/>
 
             <ImageButton
@@ -92,7 +92,7 @@
                 android:textSize="@dimen/font_large_24"
                 android:text="0"
                 android:fontFamily="sans-serif-medium"
-                android:drawableLeft="@drawable/ic_star_white_24dp"
+                android:drawableLeft="@drawable/ic_sp_24"
                 android:drawablePadding="@dimen/spacing_tiny_4"/>
             <TextView
                 android:layout_width="wrap_content"
@@ -124,7 +124,7 @@
                 android:textSize="@dimen/font_large_24"
                 android:text="0"
                 android:fontFamily="sans-serif-medium"
-                android:drawableLeft="@drawable/ic_thumb_up_white_24dp"
+                android:drawableLeft="@drawable/ic_respect_24"
                 android:drawablePadding="@dimen/spacing_tiny_4"/>
             <TextView
                 android:layout_width="wrap_content"
@@ -145,28 +145,32 @@
                 android:id="@+id/ic_avatar"
                 android:layout_width="@dimen/btn_round_size_40"
                 android:layout_height="@dimen/btn_round_size_40"
-                android:src="@drawable/ic_face_black_24dp"/>
+                android:src="@drawable/ic_avatar"/>
 
-        <!--TextInputLayout-->
+        <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/et_first_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/ic_avatar"
+                android:layout_marginLeft="@dimen/spacing_normal_16">
+            <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/profile_hint_first_name"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <EditText
-             android:id="@+id/et_first_name"
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             android:hint="@string/profile_hint_first_name"
-             android:layout_toRightOf="@id/ic_avatar"
-             android:layout_marginLeft="@dimen/spacing_normal_16"/>
-
-        <!--TextInputLayout-->
-
-        <EditText
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/et_last_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/profile_hint_last_name"
             android:layout_toRightOf="@id/ic_avatar"
             android:layout_marginLeft="@dimen/spacing_normal_16"
-            android:layout_below="@id/et_first_name"/>
+            android:layout_below="@id/et_first_name">
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/profile_hint_last_name"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
     </RelativeLayout>
 
@@ -185,16 +189,19 @@
             android:id="@+id/ic_about"
             android:layout_width="@dimen/btn_round_size_40"
             android:layout_height="@dimen/btn_round_size_40"
-            android:src="@drawable/ic_info_outline_black_24dp"/>
+            android:src="@drawable/ic_about"/>
 
-        <EditText
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/et_about"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/profile_hint_about"
             android:layout_toRightOf="@id/ic_about"
-            android:layout_marginLeft="@dimen/spacing_normal_16"
-            android:layout_below="@id/et_first_name"/>
+            android:layout_marginLeft="@dimen/spacing_normal_16">
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/profile_hint_about"/>
+        </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
     <View
@@ -212,23 +219,26 @@
             android:id="@+id/ic_repo"
             android:layout_width="@dimen/btn_round_size_40"
             android:layout_height="@dimen/btn_round_size_40"
-            android:src="@drawable/ic_backup_black_24dp"/>
+            android:src="@drawable/ic_repo"/>
 
-        <EditText
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/et_repo"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:hint="@string/profile_hint_repo"
             android:layout_toRightOf="@id/ic_repo"
             android:layout_marginLeft="@dimen/spacing_normal_16"
-            android:layout_marginRight="@dimen/spacing_normal_16"
-            android:layout_below="@id/et_first_name"/>
+            android:layout_marginRight="@dimen/spacing_normal_16">
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/profile_hint_repo"/>
+        </com.google.android.material.textfield.TextInputLayout>
         
         <ImageView
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:src="@drawable/ic_remove_red_eye_black_24dp"
+            android:src="@drawable/ic_eye_24dp"
             android:layout_gravity="center_vertical"/>
     </LinearLayout>
 
