--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -24,6 +24,7 @@
                 android:layout_marginBottom="@dimen/spacing_normal_16">
             
             <ImageButton
+                android:id="@+id/btn_switch_theme"
                 android:layout_width="@dimen/btn_round_size_40"
                 android:layout_height="@dimen/btn_round_size_40"
                 android:background="@drawable/btn_round_bg"
@@ -40,6 +41,7 @@
                 android:layout_centerHorizontal="true"/>
 
             <ImageButton
+                android:id="@+id/btn_edit"
                 android:layout_width="@dimen/btn_round_size_40"
                 android:layout_height="@dimen/btn_round_size_40"
                 android:background="@drawable/btn_round_bg"
@@ -49,7 +51,7 @@
                 android:layout_marginTop="36dp"/>
 
             <TextView
-                android:id="@+id/tv_name"
+                android:id="@+id/tv_nick_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/iv_avatar"
@@ -64,7 +66,7 @@
                 android:id="@+id/tv_rank"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/tv_name"
+                android:layout_below="@id/tv_nick_name"
                 android:layout_centerHorizontal="true"
                 android:text="Junior Android Developer"
                 android:textColor="@android:color/white"
@@ -86,6 +88,7 @@
                 android:paddingTop="@dimen/spacing_normal_16"
                 android:paddingBottom="@dimen/spacing_normal_16">
             <TextView
+                android:id="@+id/tv_rating"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/white"
@@ -118,6 +121,7 @@
                 android:paddingTop="@dimen/spacing_normal_16"
                 android:paddingBottom="@dimen/spacing_normal_16">
             <TextView
+                android:id="@+id/tv_respect"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/white"
@@ -148,25 +152,26 @@
                 android:src="@drawable/ic_avatar"/>
 
         <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/et_first_name"
+                android:id="@+id/wr_first_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_toRightOf="@id/ic_avatar"
                 android:layout_marginLeft="@dimen/spacing_normal_16">
             <EditText
+                    android:id="@+id/et_first_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/profile_hint_first_name"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/et_last_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/ic_avatar"
             android:layout_marginLeft="@dimen/spacing_normal_16"
-            android:layout_below="@id/et_first_name">
+            android:layout_below="@id/wr_first_name">
             <EditText
+                android:id="@+id/et_last_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/profile_hint_last_name"/>
@@ -192,12 +197,13 @@
             android:src="@drawable/ic_about"/>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/et_about"
+            android:id="@+id/wr_about"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/ic_about"
             android:layout_marginLeft="@dimen/spacing_normal_16">
             <EditText
+                android:id="@+id/et_about"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/profile_hint_about"/>
@@ -222,7 +228,7 @@
             android:src="@drawable/ic_repo"/>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/et_repo"
+            android:id="@+id/wr_repository"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
@@ -230,6 +236,7 @@
             android:layout_marginLeft="@dimen/spacing_normal_16"
             android:layout_marginRight="@dimen/spacing_normal_16">
             <EditText
+                android:id="@+id/et_repository"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/profile_hint_repo"/>
