--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -78,7 +78,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-        android:background="@color/color_primary_light">
+        android:background="?attr/colorAccentedSurface">
         <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -158,6 +158,7 @@
                 android:layout_toRightOf="@id/ic_avatar"
                 android:layout_marginLeft="@dimen/spacing_normal_16">
             <EditText
+                    style="@style/Profile.EditText.Single"
                     android:id="@+id/et_first_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -171,6 +172,7 @@
             android:layout_marginLeft="@dimen/spacing_normal_16"
             android:layout_below="@id/wr_first_name">
             <EditText
+                style="@style/Profile.EditText.Single"
                 android:id="@+id/et_last_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -182,7 +184,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/color_divider_dark"
+        android:background="?attr/colorDivider"
         android:layout_marginLeft="@dimen/space_maximum_72"/>
 
     <LinearLayout
@@ -203,6 +205,7 @@
             android:layout_toRightOf="@id/ic_about"
             android:layout_marginLeft="@dimen/spacing_normal_16">
             <EditText
+                style="@style/Profile.EditText.MultiLine"
                 android:id="@+id/et_about"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -213,7 +216,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/color_divider_dark"
+        android:background="?attr/colorDivider"
         android:layout_marginLeft="@dimen/space_maximum_72"/>
 
     <LinearLayout
@@ -234,8 +237,9 @@
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/ic_repo"
             android:layout_marginLeft="@dimen/spacing_normal_16"
-            android:layout_marginRight="@dimen/spacing_normal_16">
+            app:counterMaxLength="128">
             <EditText
+                style="@style/Profile.EditText.Single"
                 android:id="@+id/et_repository"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -243,10 +247,12 @@
         </com.google.android.material.textfield.TextInputLayout>
         
         <ImageView
+            android:id="@+id/ic_eye"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:src="@drawable/ic_eye_24dp"
-            android:layout_gravity="center_vertical"/>
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="@dimen/spacing_normal_16"/>
     </LinearLayout>
 
 </LinearLayout>
