--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -38,9 +38,7 @@
                 android:layout_width="@dimen/avatar_round_size"
                 android:layout_height="@dimen/avatar_round_size"
                 android:layout_centerHorizontal="true"
-                android:src="@drawable/avatar_default"
-                app:cv_borderColor="@android:color/black"
-                app:cv_borderWidth="5dp"/>
+                android:src="@drawable/avatar_default"/>
 
             <ImageButton
                 android:id="@+id/btn_edit"
