--- a/app/src/main/res/layout/activity_group.xml
+++ b/app/src/main/res/layout/activity_group.xml
@@ -54,4 +54,15 @@
 
     </LinearLayout>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="@dimen/spacing_normal_16"
+        app:srcCompat="@drawable/ic_arrow_forward_black_24dp"
+        android:visibility="invisible"
+        android:scaleX="0"
+        android:scaleY="0"/>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
