--- a/app/src/main/res/layout/activity_group.xml
+++ b/app/src/main/res/layout/activity_group.xml
@@ -36,21 +36,13 @@
             android:paddingRight="@dimen/spacing_normal_16"
             android:layout_marginTop="@dimen/spacing_small_8"
             android:layout_marginBottom="@dimen/spacing_small_8"
-            android:visibility="gone">
-
-
-
-        </com.google.android.material.chip.ChipGroup>
+            android:visibility="gone"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_user_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:listitem="@layout/item_user_list">
-
-
-
-        </androidx.recyclerview.widget.RecyclerView>
+            tools:listitem="@layout/item_user_list"/>
 
     </LinearLayout>
 
