--- a/app/src/main/res/drawable/bg_indicator.xml
+++ b/app/src/main/res/drawable/bg_indicator.xml
@@ -3,7 +3,7 @@
 
     <item>
         <shape android:shape="oval">
-            <solid android:color="@color/color_green"/>
+            <solid android:color="@color/color_indicator"/>
             <stroke
                 android:width="2dp"
                 android:color="@android:color/white"
