--- a/app/src/main/res/layout/item_user_list.xml
+++ b/app/src/main/res/layout/item_user_list.xml
@@ -4,7 +4,7 @@
     android:layout_height="@dimen/item_size"
     xmlns:tools="http://schemas.android.com/tools"
     android:padding="@dimen/spacing_normal_16"
-    android:background="@android:color/white">
+    android:background="@color/color_item_background">
 
     <ImageView
         android:id="@+id/iv_selected"
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         tools:text="user name"
         android:textSize="14sp"
-        android:textColor="@color/color_primary"
+        android:textColor="@color/color_item_title"
         android:fontFamily="sans-serif-medium"
         android:layout_toRightOf="@id/iv_avatar_user"
         android:layout_marginLeft="@dimen/spacing_normal_16"/>
@@ -49,7 +49,7 @@
         android:id="@+id/tv_last_activity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/color_gray_dark"
+        android:textColor="@color/color_item_text"
         android:layout_toRightOf="@id/iv_avatar_user"
         android:layout_below="@id/tv_user_name"
         android:layout_marginLeft="@dimen/spacing_normal_16"
