--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,10 +12,20 @@
 
     <color name="color_divider_dark">#1F000000</color>
     <color name="color_divider_light">#1FFFFFFF</color>
-    <color name="color_indicator">#581F99</color>
+    <color name="color_counter">#581F99</color>
     <color name="color_green">#4FD149</color>
 
-    <color name="item_background">#FFFFFF</color>
-    <color name="counter_background">#581F99</color>
+    <color name="color_item_background">#FFFFFF</color>
+    <color name="color_counter_background">#581F99</color>
+    <color name="color_swiped_area">#1C0E42</color>
+
+    <color name="color_toolbar">#2A1956</color>
+    <color name="color_indicator">#4FD149</color>
+
+    <color name="color_snack_bar">#2A1956</color>
+
+    <color name="color_item_title">#2A1956</color>
+    <color name="color_item_text">#675F7F</color>
+    <color name="color_item_author">#2A1956</color>
 
 </resources>
