--- a/app/src/main/res/layout/item_chat_single.xml
+++ b/app/src/main/res/layout/item_chat_single.xml
@@ -55,7 +55,7 @@
         android:textSize="10sp"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:textColor="@color/color_gray_dark"
+        android:textColor="@color/color_item_text"
         tools:text="18:00"/>
     <TextView
         android:id="@+id/tv_counter_single"
