--- a/app/src/main/res/drawable/bg_counter.xml
+++ b/app/src/main/res/drawable/bg_counter.xml
@@ -4,7 +4,7 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="10dp"/>
-            <solid android:color="@color/color_counter"/>
+            <solid android:color="@color/color_counter_background"/>
         </shape>
     </item>
 
