--- a/app/src/main/res/layout/item_chat_single.xml
+++ b/app/src/main/res/layout/item_chat_single.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/item_size"
@@ -11,8 +10,7 @@
         android:id="@+id/iv_avatar_single"
         android:layout_width="@dimen/avatar_item_size"
         android:layout_height="@dimen/avatar_item_size"
-        android:layout_alignParentLeft="true"
-        android:background="@drawable/ic_avatar"/>
+        android:layout_alignParentLeft="true"/>
 
     <View
         android:id="@+id/sv_indicator"
