--- a/app/src/main/res/layout/item_user_list.xml
+++ b/app/src/main/res/layout/item_user_list.xml
@@ -21,8 +21,7 @@
         android:id="@+id/iv_avatar_user"
         android:layout_width="@dimen/avatar_item_size"
         android:layout_height="@dimen/avatar_item_size"
-        android:layout_toRightOf="@id/iv_selected"
-        android:src="@drawable/ic_avatar"/>
+        android:layout_toRightOf="@id/iv_selected"/>
 
     <View
         android:id="@+id/sv_indicator"
